--- a/traffic_control_signals.tex
+++ b/traffic_control_signals.tex
@@ -1,5 +1,5 @@
 % File: traffic_control_signals.tex, author: John Sauter,
-% date: November 16, 2025.
+% date: November 27, 2025.
 
 % Copyright © 2025 by John Sauter.
 % Licensed under the Creative Commons Attribution-ShareAlike 4.0 International
@@ -197,12 +197,12 @@
   pdfcontacturl={https://www.systemeyescomputerstore.com},
   pdfcopyright={Copyright {\copyright} 2025 by John Sauter},
   pdfurl={https://www.systemeyescomputerstore.com/How\%5FTraffic\%5FControl\%5FSignals\%5fWork/traffic\%5Fcontrol\%5Fsignals.pdf},
-  pdfdate={2025-11-16},
+  pdfdate={2025-11-27},
   pdflicenseurl={https://creativecommons.org/licenses/by-sa/4.0},
   pdfmetalang={en-US}
 }
 
-\date{2025-11-16}
+\date{2025-11-27}
 \maketitle
 \begin{abstract}
   Traffic control signals allow vehicles and pedestrians to move through
@@ -555,12 +555,15 @@ Consider a single car approaching the bridge from the west.
 
 In the above animation, the car coming from the west activates the Traffic
 Approaching sensor for lane A.  The signal face for lane B has been red
-for some time, so signal face A immediately turns green.  The car passes
-across the bridge without stopping after which signal face A turns red.
+for some time so signal face A immediately turns green.  The car passes
+across the bridge without stopping after which signal face A turns
+back to red.
 
 If your PDF viewer will not play the animation you can see it on Youtube
-at this URL: 
-\href{https://youtu.be/YgWkwT\_6EcE}{https://youtu.be/YgWkwT\_6EcE}.
+by navigating to URL \href%
+{https://www.youtube.com/playlist?list=PLCGHQeqDmNySa8JSIUioGNoWbXebCGjyx}%
+{https://www.youtube.com/playlist?list=PLCGHQeqDmNySa8JSIUioGNoWbXebCGjyx}
+and choosing bridge one car animation 01.
 
 Here are the events shown in the above animation:
 
@@ -580,8 +583,10 @@ One car is allowed to cross the bridge immediately, and when it is
 clear of the bridge the other car is allowed to cross.
 
 If your PDF viewer will not play the animation you can see it on Youtube
-at this URL:
-\href{https://youtu.be/nRE2B95XoHo}{https://youtu.be/nRE2B95XoHo}.
+by navigating to URL \href%
+{https://www.youtube.com/playlist?list=PLCGHQeqDmNySa8JSIUioGNoWbXebCGjyx}%
+{https://www.youtube.com/playlist?list=PLCGHQeqDmNySa8JSIUioGNoWbXebCGjyx}
+and choosing bridge two cars animation 01.
 
 Here are the events shown in the above animation:
 
@@ -752,8 +757,10 @@ The traffic control signal allows traffic to pass in one direction
 only when it is stopped in the perpendicular direction.
 
 If your PDF viewer will not play the animation you can see it on Youtube
-at this URL:
-\href{https://youtu.be/CDJMpd8RGm4}{https://youtu.be/CDJMpd8RGm4}.
+by navigating to URL \href%
+{https://www.youtube.com/playlist?list=PLCGHQeqDmNySa8JSIUioGNoWbXebCGjyx}%
+{https://www.youtube.com/playlist?list=PLCGHQeqDmNySa8JSIUioGNoWbXebCGjyx}
+and choosing four corners many animation 02.
 
 Here are the events shown in the above animation:
 
@@ -1500,8 +1507,10 @@ Here is an animation, which provides the same illustration in graphic form.
 ]{{\includegraphics[width=\textwidth]{background_03}}}{VPlayer.swf}
 
 If your PDF viewer will not play the animation you can see it on Youtube
-at this URL:
-\href{https://youtu.be/RBuMvScOgxk}{https://youtu.be/RBuMvScOgxk}.
+by navigating to URL \href%
+{https://www.youtube.com/playlist?list=PLCGHQeqDmNySa8JSIUioGNoWbXebCGjyx}%
+{https://www.youtube.com/playlist?list=PLCGHQeqDmNySa8JSIUioGNoWbXebCGjyx}
+and choosing pedestrian and left turn animation 03.
 
 \subsubsection{Multiple Arrivals}
 
@@ -1550,31 +1559,13 @@ Here is an animation of the multiple arrivals scenario:
 ]{{\includegraphics[width=\textwidth]{background_03}}}{VPlayer.swf}
 
 If your PDF viewer will not play the animation you can see it on Youtube
-at this URL:
-\href{https://youtu.be/DCo7ZpW0FQg}{https://youtu.be/DCo7ZpW0FQg}.
+by navigating to URL \href%
+{https://www.youtube.com/playlist?list=PLCGHQeqDmNySa8JSIUioGNoWbXebCGjyx}%
+{https://www.youtube.com/playlist?list=PLCGHQeqDmNySa8JSIUioGNoWbXebCGjyx}
+and choosing multiple animation 03.
 
-\subsubsection{Heavy Traffic}
-
-To illustrate how this traffic control signal handles heavy traffic,
-here is an animation showing traffic arriving from all directions,
-and in the middle of the flood of traffic the intersection holds
-traffic for a few seconds due to a nearby emergency vehicle.
-
-\noindent\includemedia[width=\textwidth,
-  addresource=flood_animation_03.mkv,
-  activate=onclick, attachfiles,
-  flashvars={source=flood_animation_03.mkv &loop=false}
-]{{\includegraphics[width=\textwidth]{background_03}}}{VPlayer.swf}
-
-If your PDF viewer will not play the animation you can see it on Youtube
-at this URL:
-\href{https://youtu.be/6oFNbIGWkH4}{https://youtu.be/6oFNbIGWkH4}.
-
-A table of all of the events in the above animation would be excessively
-long, so the following table just looks at the events surrounding
-the presence of an emergency vehicle.
-
-\input{flood_table.tex}
+There are other animations in that playlist which further illustrate
+how traffic control signals handle traffic.
 
 \section{Manual Control}
 
